--- a/jobs/templates/layout.html
+++ b/jobs/templates/layout.html
@@ -7,8 +7,7 @@
     filename='css/bulma.min.css')}}">
       <link rel="stylesheet"  href="{{ url_for('static',
     filename='css/app.css')}}">
-       <link rel="stylesheet"
-             href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   </head>
   <body>
     <div class="container top">
