--- a/jobs/templates/_macros.html
+++ b/jobs/templates/_macros.html
@@ -19,12 +19,12 @@
 </div>
 {% endmacro %}
 
-{% macro sow_jobs(jobs)%}
+{% macro show_jobs(jobs)%}
 <div class="columns is-multiline">
     {% for job in jobs %}
       <div class="column is-half">
          {{ show_job(job) }}
       </div>
     {% endfor %}
-
+</div>
 {% endmacro %}
