--- a/jobs/templates/layout.html
+++ b/jobs/templates/layout.html
@@ -12,10 +12,7 @@
   </head>
   <body>
     <div class="container top">
-      <div class="content">
-        {% block content %}
-        {% endblock %}
-      </div>
+      jjj
     </div>
   </body>
 </html>
