--- a/jobs/templates/index.html
+++ b/jobs/templates/index.html
@@ -1,12 +1,2 @@
 {% extends "layout.html" %}
-<!-- templates/index.html -->
-{% block content %}
-  <div class="columns">
-    <div class="column">
-      <h1>Jobs</h1>
-    </div>
-    <div class="column is-one-fifth">
-    </div>
-  </div>
-kkk
-{% endblock %}
+<h1>from index</h1>>
