--- a/jobs/templates/layout.html
+++ b/jobs/templates/layout.html
@@ -10,7 +10,10 @@
   </head>
   <body>
     <div class="container top">
-      ewrwerwre
+      <div class="content">
+        {% block content %}
+        {% endblock %}
+      </div>
     </div>
   </body>
 </html>
