--- a/jobs/templates/layout.html
+++ b/jobs/templates/layout.html
@@ -1,20 +1,17 @@
 <!doctype html>
 <html>
   <head>
-    <title>Job Board</title>
-    <link rel="stylesheet"  href="{{ url_for('static',
-    filename='css/bulma.min.css')}}">
-      <link rel="stylesheet"  href="{{ url_for('static',
-    filename='css/app.css')}}">
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
+    {% block head %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <title>{% block title %}{% endblock %} - My Webpage</title>
+    {% endblock %}
   </head>
   <body>
-    <div class="container top">
-      <div class="content">
-        {% block content %}
-        {% endblock %}
-      </div>
+    <div id="content">{% block content %}{% endblock %}</div>
+    <div id="footer">
+      {% block footer %}
+      &copy; Copyright 2010 by <a href="http://domain.invalid/">you</a>.
+      {% endblock %}
     </div>
   </body>
 </html>
-
