--- a/jobs/templates/layout.html
+++ b/jobs/templates/layout.html
@@ -7,7 +7,8 @@
     {% endblock %}
   </head>
   <body>
-    <div>{% block content %}{% endblock %}</div>
+    <div>{% block content %}
+      {% endblock %}</div>
     <div
       {% block footer %}
       &copy; Copyright 2010 by <a href="http://domain.invalid/">you</a>.
