--- a/jobs/templates/index.html
+++ b/jobs/templates/index.html
@@ -1,12 +1,12 @@
 {% extends "layout.html" %}
-<h1>sthe header new</h1>
-{% block title %}Index{% endblock %}
-{% block head %}
-  {{ super() }}
 
-{% endblock %}
 {% block content %}
-  <h1>Index</h1>
-  <p>
-    Welcome on my awesome homepage.
+  <div class="columns">
+    <div class="column">
+      <h1>Jobs</h1>
+    </div>
+    <div class="column is-one-fifth">
+    </div>
+  </div>
+kkk
 {% endblock %}
