--- a/jobs/templates/index.html
+++ b/jobs/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-
+<!-- templates/index.html -->
 {% block content %}
   <div class="columns">
     <div class="column">
@@ -8,5 +8,5 @@
     <div class="column is-one-fifth">
     </div>
   </div>
-kkk
+{{ show_jobs(jobs)}}
 {% endblock %}
