--- a/jobs/templates/layout.html
+++ b/jobs/templates/layout.html
@@ -3,7 +3,9 @@
 <html>
   <head>
     {% block head %}
-    <link href="{{ url_for('static', filename='style.css') }}">
+    <link  rel="stylesheet" href="{{ url_for('static', filename='css/bulma.min.css')}}">
+     <link  rel="stylesheet" href="{{ url_for('static', filename='css/app.css')}}">
+     <link  rel="stylesheet" href="https://use.fontawsome.com/releases/v5.2.0/css/all.css">
     <title>{% block title %}{% endblock %} - My Webpage</title>
     {% endblock %}
   </head>
