--- a/jobs/templates/layout.html
+++ b/jobs/templates/layout.html
@@ -17,7 +17,7 @@
       {% endblock %}</div>
     <div
       {% block footer %}
-      &copy; Copyright 2010 by <a href="http://domain.invalid/">you</a>.
+      footer here.
       {% endblock %}
     </div>
   </body>
