--- a/jobs/templates/_macros.html
+++ b/jobs/templates/_macros.html
@@ -10,7 +10,7 @@
   <div class="card-content">
     <div class="content">
        <p>
-          <a href="{{ url_for('employer', employer-id=job['employer-id'])}}">{{ job['employer_name'] }}</a><br>
+          <a href="{{ url_for('employer', employer_id=job['employer-id'])}}">{{ job['employer_name'] }}</a><br>
           ${{ job['salary'] }}<br>
            {{ job['description'] }}
        </p>
